@@ -306,7 +306,7 @@ public class ViewNotificationsTest extends EmulatedFragmentTest<ViewNotification
         // Confirms notification are not yet accepted.
         List<String> canceledUsers = eventsDB.fetchEventEntrants(List.of(invite.eventId()))
                 .await()
-                .getFirst()
+                .get(0)
                 .accepted();
         Thread.sleep(1000);
         assertFalse(canceledUsers.contains(mockAccount.email()));
@@ -322,7 +322,7 @@ public class ViewNotificationsTest extends EmulatedFragmentTest<ViewNotification
         // Confirms notification is accepted.
         canceledUsers = eventsDB.fetchEventEntrants(List.of(invite.eventId()))
                 .await()
-                .getFirst()
+                .get(0)
                 .accepted();
         Thread.sleep(2000);
         assertTrue(canceledUsers.contains(mockAccount.email()));
